<resources>
    <string name="app_name">PlanToPlate</string>
    <string name="welcome_message">Welcome, (name here)!</string>
    <string name="my_recipes_btn">My Recipes</string>
    <string name="my_profile_btn">My Profile</string>
    <string name="plan_btn">Plan</string>
    <string name="share_btn">Share</string>
    <string name="front_half_background">Background to the logo on menu screen</string>
    <string name="front_page_logo">Plan to plate menu logo image</string>
    <string name="meals_planning_spinner">How many meals are we planning?</string>
    <string name="meal_type">What type of meals?</string>
    <string name="get_recipes">Get Recipes</string>
    <string name="start_over">Start Over</string>
    <string name="home">Home</string>
    <string name="selected_item">The item you selected was </string>
    <string name="save">Save </string>
    <string name="cancel">Cancel </string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="ptp_profile_key">PlanToPlate</string>
    <string name="sign_in">Sign In</string>
    <string name="new_profile">Create New Profile</string>

    //PROFILE INFORMATION STRINGS
    <string name="profile_info">Profile Info</string>
    <string name="user_name">Username:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email Address:</string>
    <string name="pass_word">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="submit_btn">Submit</string>

    //EDIT TEXT HINTS
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_pass_word">Enter Password</string>
    <string name="confirm_pass_word">Must Match Above</string>
    <string name="enter_email">Enter Email Address</string>



    <string-array name="meal_no">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="meal_type">
        <item></item>
        <item>With Meat</item>
        <item>Without Meat</item>
    </string-array>
    <string-array name="sort_by">
        <item></item>
        <item>Cost</item>
        <item>Number of Ingredients</item>
        <item>Preparation Time</item>
    </string-array>
</resources>

