<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@color/ptpYellow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/profile_info"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8.5dp"
        android:textSize="20sp"
        android:text="@string/first_name"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@+id/profile_info"/>

    <EditText
        android:id="@+id/enter_first_name"
        android:hint="@string/enter_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_info"
        android:layout_toEndOf="@+id/first_name"
        android:layout_toRightOf="@+id/first_name" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/enter_last_name"
        android:hint="@string/enter_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_first_name"
        android:layout_toEndOf="@id/last_name"
        android:layout_toRightOf="@id/last_name" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/email" />

    <EditText
        android:id="@+id/enter_email"
        android:hint="@string/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_last_name"
        android:layout_toEndOf="@id/email"
        android:layout_toRightOf="@id/email" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="9dp"
        android:paddingBottom="8dp"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@id/email"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/enter_user_name"
        android:hint="@string/enter_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_email"
        android:layout_toRightOf="@+id/user_name"
        android:layout_toEndOf="@+id/user_name" />

    <TextView
        android:id="@+id/pass_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/pass_word" />

    <EditText
        android:id="@+id/enter_pass_word"
        android:hint="@string/enter_pass_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_user_name"
        android:layout_toRightOf="@+id/pass_word"
        android:layout_toEndOf="@+id/pass_word" />

    <TextView
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="20sp"
        android:layout_below="@id/pass_word"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/enter_confirm_password"
        android:hint="@string/confirm_pass_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_pass_word"
        android:layout_toRightOf="@+id/confirm_password"
        android:layout_toEndOf="@+id/confirm_password" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/submit_btn"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/confirm_password"/>

</RelativeLayout>