<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlansFragment"
    android:id="@+id/plans_fragment"
    >


    <TextView
        android:id="@+id/plans_ui_background"
        android:layout_width="415dp"
        android:layout_height="319dp"
        android:background="@color/ptpRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/no_meals_plam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/meals_planning_spinner"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/meal_number_spinner"
        app:layout_constraintTop_toTopOf="@+id/plans_ui_background"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/meal_number_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        app:layout_constraintBottom_toBottomOf="@+id/plans_ui_background"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/meal_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="18sp"
        android:text="@string/meal_type"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/meal_type_spinner"
        app:layout_constraintTop_toBottomOf="@+id/meal_number_spinner"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="1dp" />

    <Spinner
        android:id="@+id/meal_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        app:layout_constraintBottom_toBottomOf="@+id/plans_ui_background"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/home_btn"
        android:text="@string/home"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:background="@drawable/btn_rounded"
        app:layout_constraintStart_toEndOf="@id/start_over"
        app:layout_constraintBottom_toBottomOf="@+id/plans_ui_background"
        app:layout_constraintEnd_toEndOf="@+id/plans_ui_background"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_spinner" />

    <Button
        android:id="@+id/get_recipes"
        android:text="@string/get_recipes"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:background="@drawable/btn_rounded"
        app:layout_constraintBottom_toBottomOf="@+id/plans_ui_background"
        app:layout_constraintEnd_toStartOf="@+id/start_over"
        app:layout_constraintStart_toStartOf="@+id/plans_ui_background"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_spinner" />

    <Button
        android:id="@+id/start_over"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/montserrat"
        android:text="@string/start_over"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/plans_ui_background"
        app:layout_constraintEnd_toStartOf="@+id/home_btn"
        app:layout_constraintStart_toEndOf="@+id/get_recipes"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_spinner"

        />

</androidx.constraintlayout.widget.ConstraintLayout>