<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:id="@+id/profile_fragment">


    <TextView
        android:id="@+id/plans_ui_background"
        android:layout_width="415dp"
        android:layout_height="319dp"
        android:background="@color/ptpRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/home_btn"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/montserrat"
        android:text="@string/home"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_profile" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/new_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/plans_ui_background" />

    <Button
        android:id="@+id/new_profile"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/montserrat"
        android:text="@string/new_profile"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/home_btn"
        app:layout_constraintEnd_toEndOf="@+id/plans_ui_background"
        app:layout_constraintStart_toStartOf="@+id/plans_ui_background" />



</androidx.constraintlayout.widget.ConstraintLayout>